fix: harden user import and data scope